kubernetes/apps/files/filebrowser/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser-http
spec:
  parentRefs:
    - name: default
      sectionName: http-wildcard
      kind: Gateway
      namespace: istio-system
    - name: default
      sectionName: http-wildcard-local
      kind: Gateway
      namespace: istio-system
  hostnames:
    - filebrowser.${PUBLIC_DOMAIN}
    - filebrowser.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser-https
spec:
  parentRefs:
    - name: default
      sectionName: https-wildcard
      kind: Gateway
      namespace: istio-system
    - name: default
      sectionName: https-wildcard-local
      kind: Gateway
      namespace: istio-system
  hostnames:
    - filebrowser.${PUBLIC_DOMAIN}
    - filebrowser.${LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: filebrowser-filebrowser
          port: 80
